# ida-headless-mcp-exp

./: .gitignore  CODE_OF_CONDUCT.md  GOLDEN_RULES.md  README.md  SECURITY.md  pyproject.toml  run.bat  run.sh
.claude/: AGENTS.md  CLAUDE.md
.git-rewrite/: backup-refs  commit  index  message  parse  revs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: api_categories.json  api_hashes.json  api_names.txt  crypto_sigs.json  deobfuscation_rules.json
data/hashdb_algorithms/: babbleloader.py  babbleloader_0125.py  djb2_vohuk_ransomware_dec_2022.py  lockbit4_0225.py  mul37_tolower.py  smt_api_hashing.py
docs/: BUILD_POLICY.md  CFF_REMAINING_WORK.md  COMPETITIVE_ANALYSIS.md  MASTER_PLAN.md  PLUGIN_STRATEGY.md  PROBE_RESULTS.md
scripts/: build_diff_fixture.py  build_rule_fixtures.py  mcp_client_test.py  probe_idalib.py  smoke_minimal.py  warmup_decompile.py
src/ida_headless_mcp/: __init__.py  _resolve.py  api_hashes.py  api_tracer.py  binary_formats.py  binary_worker.py  bootstrap.py  cache_reader.py  capa_rules.py  cff_analysis.py  cff_helpers.py  cff_patcher.py  cff_pseudocode.py  config.py  ctree_to_smt.py  decompile_worker.py  detection.py  diff.py  function_index.py  guards.py  hexrays_analysis.py  hexrays_cff.py  http_api.py  lifecycle.py  miasm_tools.py  mutations.py  pe_imports.py  pe_reader.py  pool.py  proof.py  recovery.py  server.py  session.py  session_analysis.py  session_detection.py  session_proof.py  smt_prover.py  string_decrypt.py  worker.py
tests/: test_cff.py
(+35 files in other folders)
